[gd_scene load_steps=22 format=3 uid="uid://ccn36tv855lrj"]

[ext_resource type="Script" path="res://Scripts/Classes/Levels/morton_boss_room.gd" id="1_b6wlr"]
[ext_resource type="AudioStream" uid="uid://ba78prjxuoedr" path="res://Resources/MusicTracks/BossBattle.tres" id="2_g0581"]
[ext_resource type="Texture2D" uid="uid://f63cjvaujbh4" path="res://Assets/Sprites/Castle/BossRoom1.png" id="2_j6er7"]
[ext_resource type="PackedScene" uid="uid://cqw1qs0bt5s4o" path="res://Instances/Prefabs/Player.tscn" id="3_8hbkc"]
[ext_resource type="Texture2D" uid="uid://b3xs1ywpvnbmb" path="res://Assets/Sprites/Tilesets/Decorations/BossRoomDecor.png" id="4_gsx1p"]
[ext_resource type="Texture2D" uid="uid://cba6rbydqphkl" path="res://Assets/Sprites/Castle/BossLava.png" id="5_1rmw1"]
[ext_resource type="Texture2D" uid="uid://jqfdwgupuqpp" path="res://Assets/Sprites/Castle/BossRoomWall.png" id="6_oxq5x"]
[ext_resource type="AudioStream" uid="uid://bnds5qks67xjb" path="res://Assets/Audio/SFX/bullet.wav" id="7_xwcur"]
[ext_resource type="PackedScene" uid="uid://bby32mgptmtqk" path="res://Instances/Prefabs/Enemies/Bosses/morton.tscn" id="8_g7poc"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_h7315"]
size = Vector2(256, 16)

[sub_resource type="Shader" id="Shader_ulrwp"]
code = "// HSV to RBG from https://www.rapidtables.com/convert/color/hsv-to-rgb.html
// Rotation matrix from https://en.wikipedia.org/wiki/Rotation_matrix

shader_type canvas_item;


uniform float strength: hint_range(0., 1.) = 0.5;
uniform float speed: hint_range(0., 10.) = 0.5;
uniform float angle: hint_range(0., 360.) = 0.;

void fragment() {
	float hue = UV.x * cos(radians(angle)) - UV.y * sin(radians(angle));
	hue = fract(hue + fract(TIME  * speed));
	float x = 1. - abs(mod(hue / (1./ 6.), 2.) - 1.);
	vec3 rainbow;
	if(hue < 1./6.){
		rainbow = vec3(1., x, 0.);
	} else if (hue < 1./3.) {
		rainbow = vec3(x, 1., 0);
	} else if (hue < 0.5) {
		rainbow = vec3(0, 1., x);
	} else if (hue < 2./3.) {
		rainbow = vec3(0., x, 1.);
	} else if (hue < 5./6.) {
		rainbow = vec3(x, 0., 1.);
	} else {
		rainbow = vec3(1., 0., x);
	}
	vec4 color = texture(TEXTURE, UV);
	COLOR = mix(color, vec4(rainbow, color.a), strength);
}"

[sub_resource type="ShaderMaterial" id="ShaderMaterial_60k7h"]
resource_local_to_scene = true
shader = SubResource("Shader_ulrwp")
shader_parameter/strength = 0.0
shader_parameter/speed = 0.5
shader_parameter/angle = 36.404

[sub_resource type="AtlasTexture" id="AtlasTexture_rhqbu"]
atlas = ExtResource("5_1rmw1")
region = Rect2(0, 0, 256, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_qfinr"]
atlas = ExtResource("5_1rmw1")
region = Rect2(0, 16, 256, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_0hp6d"]
atlas = ExtResource("5_1rmw1")
region = Rect2(0, 32, 256, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_r4611"]
atlas = ExtResource("5_1rmw1")
region = Rect2(0, 48, 256, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_2vt8x"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rhqbu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qfinr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0hp6d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r4611")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_156n2"]
size = Vector2(16, 128)

[sub_resource type="Animation" id="Animation_tvl6f"]
resource_name = "Fall"
length = 2.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("WallL:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1e-05),
"update": 0,
"values": [Vector2(56, -208), Vector2(56, -64)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("WallR:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(296, -208), Vector2(296, -64)]
}
tracks/2/type = "audio"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("SlamSFX")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("7_xwcur")
}, {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("7_xwcur")
}],
"times": PackedFloat32Array(1, 2)
}
tracks/2/use_blend = true

[sub_resource type="Animation" id="Animation_jp5n0"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("WallL:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(56, -208)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("WallR:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(296, -208)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_puuq3"]
_data = {
"Fall": SubResource("Animation_tvl6f"),
"RESET": SubResource("Animation_jp5n0")
}

[node name="MortonBossRoom" type="Node"]
script = ExtResource("1_b6wlr")
level_music = ExtResource("2_g0581")
lock_camera = true

[node name="Terrain" type="StaticBody2D" parent="."]
collision_layer = 15
collision_mask = 0

[node name="MainSprite" type="Sprite2D" parent="Terrain"]
position = Vector2(176, -64)
texture = ExtResource("2_j6er7")

[node name="MainSprite2" type="Sprite2D" parent="Terrain"]
position = Vector2(-80, -64)
texture = ExtResource("2_j6er7")

[node name="MainSprite3" type="Sprite2D" parent="Terrain"]
position = Vector2(432, -64)
texture = ExtResource("2_j6er7")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Terrain"]
position = Vector2(176, 8)
shape = SubResource("RectangleShape2D_h7315")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Terrain"]
position = Vector2(176, -136)
shape = SubResource("RectangleShape2D_h7315")

[node name="Board" type="Sprite2D" parent="Terrain"]
z_index = -5
position = Vector2(112, -40)
texture = ExtResource("4_gsx1p")
hframes = 2
vframes = 3
frame = 3

[node name="Board2" type="Sprite2D" parent="Terrain"]
z_index = -5
position = Vector2(128, -56)
texture = ExtResource("4_gsx1p")
hframes = 2
vframes = 3
frame = 3

[node name="Board3" type="Sprite2D" parent="Terrain"]
z_index = -5
position = Vector2(152, -8)
texture = ExtResource("4_gsx1p")
hframes = 2
vframes = 3
frame = 3

[node name="Board4" type="Sprite2D" parent="Terrain"]
z_index = -5
position = Vector2(192, -48)
texture = ExtResource("4_gsx1p")
hframes = 2
vframes = 3
frame = 3

[node name="Board5" type="Sprite2D" parent="Terrain"]
z_index = -5
position = Vector2(224, -32)
texture = ExtResource("4_gsx1p")
hframes = 2
vframes = 3
frame = 3

[node name="Board6" type="Sprite2D" parent="Terrain"]
z_index = -5
position = Vector2(240, -8)
texture = ExtResource("4_gsx1p")
hframes = 2
vframes = 3
frame = 3

[node name="Board7" type="Sprite2D" parent="Terrain"]
z_index = -5
position = Vector2(264, -56)
texture = ExtResource("4_gsx1p")
hframes = 2
vframes = 3
frame = 3

[node name="Board8" type="Sprite2D" parent="Terrain"]
z_index = -5
position = Vector2(256, -120)
texture = ExtResource("4_gsx1p")
hframes = 2
vframes = 3
frame = 3

[node name="Board9" type="Sprite2D" parent="Terrain"]
z_index = -5
position = Vector2(144, -120)
texture = ExtResource("4_gsx1p")
hframes = 2
vframes = 3
frame = 3

[node name="Board10" type="Sprite2D" parent="Terrain"]
z_index = -5
position = Vector2(112, -96)
texture = ExtResource("4_gsx1p")
hframes = 2
vframes = 3
frame = 5

[node name="Board11" type="Sprite2D" parent="Terrain/Board10"]
z_index = -5
position = Vector2(0, 16)
texture = ExtResource("4_gsx1p")
flip_h = true
flip_v = true
hframes = 2
vframes = 3
frame = 5

[node name="Board11" type="Sprite2D" parent="Terrain"]
z_index = -5
position = Vector2(176, -96)
texture = ExtResource("4_gsx1p")
hframes = 2
vframes = 3
frame = 5

[node name="Board11" type="Sprite2D" parent="Terrain/Board11"]
z_index = -5
position = Vector2(0, 16)
texture = ExtResource("4_gsx1p")
flip_h = true
flip_v = true
hframes = 2
vframes = 3
frame = 5

[node name="Board12" type="Sprite2D" parent="Terrain"]
z_index = -5
position = Vector2(240, -96)
texture = ExtResource("4_gsx1p")
hframes = 2
vframes = 3
frame = 5

[node name="Board11" type="Sprite2D" parent="Terrain/Board12"]
z_index = -5
position = Vector2(0, 16)
texture = ExtResource("4_gsx1p")
flip_h = true
flip_v = true
hframes = 2
vframes = 3
frame = 5

[node name="Player" parent="." instance=ExtResource("3_8hbkc")]
material = SubResource("ShaderMaterial_60k7h")
position = Vector2(96, 0)

[node name="BG" type="ColorRect" parent="."]
z_index = -4096
offset_left = -168.0
offset_top = -248.0
offset_right = 576.0
offset_bottom = 56.0
color = Color(0, 0, 0, 1)
metadata/_edit_use_anchors_ = true

[node name="Lava" type="AnimatedSprite2D" parent="."]
position = Vector2(176, 40)
sprite_frames = SubResource("SpriteFrames_2vt8x")
autoplay = "default"

[node name="Lava2" type="AnimatedSprite2D" parent="."]
position = Vector2(-80, 40)
sprite_frames = SubResource("SpriteFrames_2vt8x")
autoplay = "default"
frame_progress = 0.802005

[node name="Lava3" type="AnimatedSprite2D" parent="."]
position = Vector2(432, 40)
sprite_frames = SubResource("SpriteFrames_2vt8x")
autoplay = "default"
frame_progress = 0.802005

[node name="WallL" type="StaticBody2D" parent="."]
z_index = -1
position = Vector2(56, -208)
collision_layer = 15
collision_mask = 0

[node name="Sprite" type="Sprite2D" parent="WallL"]
position = Vector2(8, 8)
texture = ExtResource("6_oxq5x")

[node name="CollisionShape2D" type="CollisionShape2D" parent="WallL"]
position = Vector2(8, 0)
shape = SubResource("RectangleShape2D_156n2")

[node name="WallR" type="StaticBody2D" parent="."]
z_index = -1
position = Vector2(296, -208)
collision_layer = 15
collision_mask = 0

[node name="Sprite" type="Sprite2D" parent="WallR"]
position = Vector2(-8, 8)
texture = ExtResource("6_oxq5x")

[node name="CollisionShape2D" type="CollisionShape2D" parent="WallR"]
position = Vector2(-8, 0)
shape = SubResource("RectangleShape2D_156n2")

[node name="SlamSFX" type="AudioStreamPlayer" parent="."]
process_mode = 3
volume_db = -15.0
bus = &"SFX"

[node name="IntroAnimation" type="AnimationPlayer" parent="."]
process_mode = 3
libraries = {
"": SubResource("AnimationLibrary_puuq3")
}
autoplay = "Fall"

[node name="Morton" parent="." instance=ExtResource("8_g7poc")]
position = Vector2(256, 0)

[connection signal="defeated" from="Morton" to="." method="victory"]
